添付ファイルを別テーブルに分割

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,7 +12,10 @@
         <h:link outcome="/customermaster/List" value="Show All Customermaster Items"/>
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefacesようこそページ" />
+        <br />
+        <h:link outcome="/treatmentattachedfile/List" value="Show All Treatmentattachedfile Items"/>
     </h:body>
+
 
 
 
