顧客情報閲覧の年月日表示を修正

--- a/src/main/webapp/customermaster/View.xhtml
+++ b/src/main/webapp/customermaster/View.xhtml
@@ -63,7 +63,7 @@
                                 <p:outputLabel value="#{bundle.L施術日}"/>
                             </f:facet>
                             <p:outputLabel value="#{item.treatmentdate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm" timeZone="JST" />
+                                <f:convertDateTime pattern="yyyy/MM/dd HH:mm" timeZone="JST" />
                             </p:outputLabel>
                         </p:column>
                         <p:column>
