ページタイトルのバグ修正。 施術情報で添付ファイルの登録・変更部分のバグ修正。

--- a/src/main/webapp/customermaster/Search.xhtml
+++ b/src/main/webapp/customermaster/Search.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="顧客検索" />
+            顧客検索
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
