--- a/src/main/webapp/treatment/View.xhtml
+++ b/src/main/webapp/treatment/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <p:outputLabel value="#{bundle.ViewTreatmentTitle}"></p:outputLabel>
+            #{bundle.ViewTreatmentTitle}
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
