--- a/src/main/webapp/customermaster/Create.xhtml
+++ b/src/main/webapp/customermaster/Create.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateCustomermasterTitle}"></h:outputText>
+            #{bundle.CreateCustomermasterTitle}
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
