--- a/src/main/webapp/customermaster/Edit.xhtml
+++ b/src/main/webapp/customermaster/Edit.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.EditCustomermasterTitle}"></h:outputText>
+            #{bundle.EditCustomermasterTitle}
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
